[package]
name = "pf-rs"
version = "0.1.0"
edition = "2021"
description = "Rust packet filter generator"
authors = ["Miguel Guarniz <mi9uel9@gmail.com>"]
license = "LGPL-2.1 OR BSD-2-Clause"
keywords = ["bpf", "ebpf", "libpf", "pf"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
libpf-rs = { path = "../libpf-rs"}